<resources>
    <string name="app_name">Traffic</string>

    <!-- LoginActivity -->
    <string name="login_userName">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="frustrated">忘记密码</string>
    <string name="usernameError">用户名为空</string>
    <string name="passwordError">密码为空</string>

    <!-- MainActivity -->
    <string name="menu_mistake">违规</string>
    <string name="menu_main">Home</string>
    <string name="menu_myself">我的</string>
    <string name="back">再按一次退出程序!</string>

    <!-- MistakeFragment -->
    <string name="menu_search">查询</string>
    <string name="menu_uploading">上传</string>

    <!-- MyselfFragment -->
    <string name="myself_account">账号管理</string>
    <string name="myself_feedback">意见反馈</string>
    <string name="myself_examine">版本检查</string>
    <string name="myself_exit">退出登录</string>

    <!-- CircleDialog -->
    <string name="Dialog_title">提示</string>
    <string name="Dialog_Examine_text">已是最新版本1.0</string>
    <string name="Dialog_text">是否确定退出</string>
    <string name="Dialog_feedback_number_error">字数已超过200</string>
    <string name="Dialog_true">确定</string>
    <string name="Dialog_false">取消</string>

    <!-- LoadingDialog -->
    <string name="Loading_loading">加载中…</string>
    <string name="Loading_login">登录中…</string>
    <string name="Loading_upload">上传中…</string>
    <string name="Loading_search">查询中…</string>

    <!-- FeedbackActivity -->
    <string name="feedback_question">问题描述</string>
    <string name="feedback_describe">描述不要超过200字</string>
    <string name="feedback_number">字数：</string>
    <string name="feedback_way">联系方式</string>
    <string name="feedback_mail">填写邮箱</string>
    <string name="feedback_feedback">提交反馈</string>

    <string name="feedback_describe_error">请填写反馈意见</string>
    <string name="feedback_mail_null">请填写邮箱</string>
    <string name="feedback_mail_error">请正确填写邮箱</string>
    <string name="feedback_success">提交成功</string>
    <string name="feedback_fail">提交失败</string>

    <!-- UploadFragment -->
    <string name="car_number">车辆牌号:</string>
    <string name="car_color">车身颜色:</string>
    <string name="car_type">车辆类型:</string>
    <string name="other_type">其他类型:</string>
    <string name="input_other_type">请输入车辆类型</string>
    <string name="carBoard_color">车牌颜色:</string>
    <string name="mistake_time">违法时间:</string>
    <string name="mistake_place">违法地点:</string>
    <string name="mistake_describe">违法描述:</string>
    <string name="police">执法交警:</string>
    <string name="mistake_uploading">提交</string>
    
    <string name="car_big">大型客车</string>
    <string name="car_small">小型客车</string>
    <string name="truck_big">大型货车</string>
    <string name="truck_small">小型货车</string>
    <string name="motorcycle">摩托车</string>
    
    <string name="other">其他</string>

    <string name="color_blue">蓝色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_white">白色</string>
    <string name="color_black">黑色</string>
    <string name="color_green">绿色</string>

    <string name="errorCarNumber">请填写车辆牌号</string>
    <string name="errorCarColor">请填写车辆颜色</string>
    <string name="errorType">请选择车辆类型</string>
    <string name="errorBoardColor">请选择车牌颜色</string>
    <string name="errorDescribe">请描述</string>

    <string name="uploading_success">上传成功!!!</string>
    <string name="uploading_fail">无法上传!!!</string>

    <!-- SearchFragment -->
    <string name="searchMsg">输入车主身份证号或车牌号码</string>
    <string name="searchMsgError">请输入车主身份证号或车牌号码</string>
    <string name="searchFail">查询失败</string>

    <!-- Message -->
    <string name="carUserName">车主姓名:</string>
    <string name="carUserSex">性别:</string>
    <string name="carUserID">身份证号:</string>
    <string name="carNumber">车辆牌号:</string>
    <string name="carType">车辆类型:</string>
    <string name="carName">车辆品牌:</string>
    <string name="carColor">车身颜色:</string>
    <string name="carMistake">违章记录:</string>

    <!-- SafetyActivity -->
    <string name="userName">姓名:</string>
    <string name="userGander">性别:</string>
    <string name="userId">身份证号:</string>
    <string name="userPassword">密码:</string>
    <string name="userTel">电话:</string>
    <string name="userHome">住址:</string>
    <string name="makeSure">确定</string>
</resources>