<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.mistake.uploading.UploadingFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_number"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/carNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_color"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/carColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/layoutCarType"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/car_type"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/carBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_big" />

                <CheckBox
                    android:id="@+id/carSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spaceType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/truckBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truck_big" />

                <CheckBox
                    android:id="@+id/truckSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truck_small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/motorcycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motorcycle" />

                <CheckBox
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/layout0therType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_type"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/otherType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_other_type"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/layoutBoardColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carBoard_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/colorBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_blue" />

                <CheckBox
                    android:id="@+id/colorYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_yellow" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/spaceColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/colorGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_green" />

                <CheckBox
                    android:id="@+id/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_black" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mistake_time"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mistakeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mistake_place"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mistake_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mistake_describe"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mistake_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/policeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_uploading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mistake_uploading"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>