<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyselfBK"
    tools:context=".main.myself.feedback.FeedbackActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_common"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_question"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.01999998" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.13">

        <EditText
            android:id="@+id/feedback_text_feedback"
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:background="#FFFFFF"
            android:gravity="start"
            android:hint="@string/feedback_describe"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/feedback_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="end"
            android:text="@string/feedback_number" />
    </FrameLayout>

    <Button
        android:id="@+id/feedback_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/feedback_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/feedback_text_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/feedback_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_way"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.56" />
</androidx.constraintlayout.widget.ConstraintLayout>